--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.17",
     "formik": "^2.2.9",
-    "framer-motion": "^7.3.5",
+    "framer-motion": "^7.10.3",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
+    "swiper": "file:swiper/modules/navigation",
     "tailwindcss": "^3.4.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
